--- a/index.html
+++ b/index.html
@@ -1,30 +1,163 @@
-/* تنسيق التوقيع والحالة */
-.msg-signature { 
-    display: block; 
-    font-size: 10px; 
-    color: var(--gold); 
-    margin-top: 5px; 
-    border-top: 1px solid #333; 
-    padding-top: 2px; 
-    font-style: italic;
-}
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <title>إدارة شات البرنس | النسخة الكاملة</title>
+    <style>
+        :root { --gold: #ff9800; --bg: #050505; --panel: #161616; --admin-red: #ff0000; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Tahoma', sans-serif; }
+        body { background: var(--bg); color: #fff; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
 
-.status-select {
-    background: #000;
-    color: #00ff00;
-    border: 1px solid #444;
-    font-size: 10px;
-    border-radius: 3px;
-    margin-top: 5px;
-}
+        /* --- تنسيقات الحالة والتوقيع والرسائل الخاصة التي أرسلتها --- */
+        .msg-signature { 
+            display: block; font-size: 10px; color: var(--gold); 
+            margin-top: 5px; border-top: 1px solid #333; padding-top: 2px; font-style: italic; 
+        }
+        .status-select { 
+            background: #000; color: #00ff00; border: 1px solid #444; 
+            font-size: 10px; border-radius: 3px; margin-top: 5px; cursor: pointer;
+        }
+        .priv-notify { 
+            background: #2980b9; color: white; padding: 8px; font-size: 12px; 
+            text-align: center; border-radius: 5px; margin: 10px 0; border: 1px solid #fff;
+            animation: pulse 2s infinite;
+        }
+        @keyframes pulse { 0% {opacity: 1;} 50% {opacity: 0.7;} 100% {opacity: 1;} }
 
-/* تنبيه الرسائل الخاصة */
-.priv-notify {
-    background: #2980b9;
-    color: white;
-    padding: 5px;
-    font-size: 11px;
-    text-align: center;
-    border-radius: 5px;
-    margin: 5px 0;
-}
+        /* --- واجهة الدخول --- */
+        #login-screen { position: fixed; inset: 0; background: #000; z-index: 5000; display: flex; justify-content: center; align-items: center; }
+        .login-box { background: var(--panel); padding: 40px; border-radius: 20px; border: 2px solid var(--gold); text-align: center; width: 350px; }
+        .login-box input { width: 100%; padding: 12px; margin-bottom: 20px; background: #000; border: 1px solid #444; color: var(--gold); border-radius: 8px; text-align: center; }
+
+        /* --- الهيدر والسايد بار --- */
+        header { background: #000; padding: 12px 20px; border-bottom: 2px solid var(--gold); display: flex; justify-content: space-between; align-items: center; }
+        .sidebar { width: 260px; background: var(--panel); border-left: 1px solid #333; display: flex; flex-direction: column; }
+        .user-card { padding: 15px; border-bottom: 1px solid #222; display: flex; align-items: center; gap: 10px; }
+        .user-card img { width: 50px; height: 50px; border-radius: 50%; border: 2px solid var(--gold); object-fit: cover; }
+
+        /* --- ساحة الشات --- */
+        .chat-area { flex: 1; display: flex; flex-direction: column; background: #000; }
+        #chat-messages { flex: 1; padding: 20px; overflow-y: auto; display: flex; flex-direction: column; gap: 15px; }
+        
+        .msg-container { display: flex; align-items: flex-start; gap: 10px; }
+        .msg-avatar { width: 45px; height: 45px; border-radius: 50%; border: 1px solid var(--gold); object-fit: cover; }
+        .msg-bubble { background: #1a1a1a; padding: 12px; border-radius: 15px; border-bottom-right-radius: 2px; max-width: 80%; }
+        .msg-user { font-weight: bold; color: var(--admin-red); font-size: 13px; display: block; margin-bottom: 5px; }
+
+        /* --- منطقة الكتابة --- */
+        .input-bar { padding: 15px; background: #111; border-top: 1px solid #333; display: flex; gap: 10px; }
+        #mainInput { flex: 1; padding: 12px; background: #000; border: 1px solid #444; color: #fff; border-radius: 8px; outline: none; }
+        .btn-send { background: var(--gold); border: none; padding: 0 25px; border-radius: 8px; font-weight: bold; cursor: pointer; }
+
+        /* --- المودال (الملف الشخصي) --- */
+        .modal { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #1a1a1a; border: 2px solid var(--gold); width: 320px; padding: 25px; border-radius: 15px; display: none; z-index: 4000; text-align: center; }
+        .modal img { width: 100px; height: 100px; border-radius: 50%; border: 2px solid var(--gold); margin-bottom: 15px; object-fit: cover; }
+    </style>
+</head>
+<body>
+
+    <div id="login-screen">
+        <div class="login-box">
+            <h1 style="color:var(--gold)">شات البرنس</h1>
+            <input type="text" id="entryName" placeholder="أدخل اسم الماستر">
+            <button class="btn-send" style="width:100%; height:45px;" onclick="startApp()">دخول</button>
+        </div>
+    </div>
+
+    <header>
+        <div style="color:var(--gold); font-weight:bold;">👑 لوحة تحكم الماستر</div>
+        <button onclick="toggleModal()" style="background:none; border:1px solid var(--gold); color:var(--gold); padding:5px 15px; border-radius:20px; cursor:pointer;">الملف الشخصي</button>
+    </header>
+
+    <div style="display:flex; flex:1; overflow:hidden;">
+        <div class="sidebar">
+            <div style="padding:10px; background:#222; text-align:center; color:var(--gold); font-size:12px;">المتواجدون</div>
+            <div class="user-card">
+                <img id="myAvatarSide" src="https://cdn-icons-png.flaticon.com/512/149/149071.png">
+                <div>
+                    <b id="myNameSide" style="color:red; display:block;">المدير</b>
+                    <select class="status-select" id="myStatus" onchange="updateStatus()">
+                        <option value="🟢 متصل">متصل</option>
+                        <option value="🔴 مشغول">مشغول</option>
+                        <option value="💤 نائم">نائم</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
+        <div class="chat-area">
+            <div id="chat-messages">
+                <div class="priv-notify">🔔 تنبيه: لديك صلاحيات الإدارة الكاملة الآن.</div>
+            </div>
+            <div class="input-bar">
+                <input type="text" id="mainInput" placeholder="اكتب رسالتك هنا...">
+                <button class="btn-send" onclick="send()">إرسال</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="profileModal" class="modal">
+        <h3 style="color:var(--gold); margin-bottom:15px;">إعدادات ملفك</h3>
+        <img id="previewImg" src="https://cdn-icons-png.flaticon.com/512/149/149071.png">
+        <br>
+        <label style="background:var(--gold); color:#000; padding:5px 10px; border-radius:5px; cursor:pointer; font-size:12px; font-weight:bold;">
+            تغيير الصورة
+            <input type="file" id="fileInp" hidden accept="image/*">
+        </label>
+        <input type="text" id="sigInp" placeholder="اكتب توقيعك هنا" style="width:100%; margin-top:15px; padding:8px; background:#000; border:1px solid #444; color:var(--gold); text-align:center;">
+        <button class="btn-send" style="width:100%; margin-top:15px;" onclick="toggleModal()">حفظ وإغلاق</button>
+    </div>
+
+    <script>
+        let myData = { name: "البرنس", photo: "https://cdn-icons-png.flaticon.com/512/149/149071.png", sig: "إدارة شات البرنس" };
+
+        function startApp() {
+            const n = document.getElementById('entryName').value;
+            if(!n.trim()) return;
+            myData.name = n;
+            document.getElementById('login-screen').style.display = 'none';
+            document.getElementById('myNameSide').innerText = n;
+            document.getElementById('chat-messages').innerHTML += `<div style="color:var(--gold); text-align:center; font-weight:bold; margin:10px 0;">✨ انضم الماستر: ${n} ✨</div>`;
+        }
+
+        function send() {
+            const inp = document.getElementById('mainInput');
+            const box = document.getElementById('chat-messages');
+            const status = document.getElementById('myStatus').value;
+            const signature = document.getElementById('sigInp').value || myData.sig;
+
+            if(!inp.value.trim()) return;
+
+            const html = `
+                <div class="msg-container">
+                    <img src="${myData.photo}" class="msg-avatar">
+                    <div class="msg-bubble">
+                        <span class="msg-user">${myData.name} <small style="color:#666;">(${status})</small></span>
+                        <div style="color:#fff;">${inp.value}</div>
+                        <span class="msg-signature">📝 ${signature}</span>
+                    </div>
+                </div>`;
+            box.innerHTML += html;
+            inp.value = '';
+            box.scrollTop = box.scrollHeight;
+        }
+
+        function toggleModal() {
+            const m = document.getElementById('profileModal');
+            m.style.display = (m.style.display === 'block') ? 'none' : 'block';
+        }
+
+        document.getElementById('fileInp').onchange = function(e) {
+            const r = new FileReader();
+            r.onload = function() {
+                myData.photo = r.result;
+                document.getElementById('previewImg').src = r.result;
+                document.getElementById('myAvatarSide').src = r.result;
+            };
+            r.readAsDataURL(e.target.files[0]);
+        };
+
+        document.getElementById('mainInput').onkeypress = (e) => { if(e.key === 'Enter') send(); };
+    </script>
+</body>
+</html
